--- a/src/main/webapp/WEB-INF/templates/car_service_request.html
+++ b/src/main/webapp/WEB-INF/templates/car_service_request.html
@@ -1,13 +1,14 @@
+
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
-<head>
-    <title>Zajavka car dealer!</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
-          rel="stylesheet"
-          integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
-          crossorigin="anonymous">
 
+<head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
+          rel="stylesheet"
+          integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
+          crossorigin="anonymous">
+    <title>Zajavka Car Dealer</title>
 </head>
 
 <body>
@@ -21,48 +22,19 @@
             <a th:href="@{/}" class="btn btn-info" role="button">Go back to the main page</a>
         </div>
     </div>
-    <br>
-    <br>
-
-    <h2>Want to buy a car?</h2>
-    <p>The best place to buy a car is Zajavka Car!</p>
-    <p>Please take a look at available cars!</p>
-
-    <div>
-        <table class="table">
-            <thead class="table-dark">
-            <tr>
-                <th>vin</th>
-                <th>brand</th>
-                <th>model</th>
-                <th>year</th>
-                <th>color</th>
-                <th>price</th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr th:each="car: ${availableCarDTOs}">
-                <td th:text="${car.vin}"></td>
-                <td th:text="${car.brand}"></td>
-                <td th:text="${car.model}"></td>
-                <td th:text="${car.year}"></td>
-                <td th:text="${car.color}"></td>
-                <td th:text="${car.price}"></td>
-            </tr>
-            </tbody>
-        </table>
-    </div>
 
     <br>
     <br>
-</div>
 
-<div class="container">
-    <h2>Are you new or existing customer?</h2>
-    <form action="#" th:action="@{/purchase}" method="POST" th:object="${carPurchaseDTO}">
+    <h2>Having trouble with your car?</h2>
+    <p>Zajavka Car Service is for you!</p>
+    <p>Please fill in the following form!</p>
+
+    <h3>What is going on with your car?</h3>
+    <form action="#" th:action="@{/service/request}" th:object="${carServiceRequestDTO}" method="POST">
         <div class="row mt-3">
             <div class="col-md-6">
-                <h3> If you are existing customer - please give us your email and chose the car!</h3>
+                <h3>If you are existing customer - please give us your email and provide car vin number!</h3>
                 <div class="row mt-3">
                     <div class="col-md-3">
                         <label for="existingCustomerEmail">Your email:</label>
@@ -71,13 +43,19 @@
                         <input type="text" id="existingCustomerEmail" th:field="*{existingCustomerEmail}">
                     </div>
                 </div>
+                <div class="row mt-3">
+                    <div class="col-md-3">
+                        <label for="existingCarVin">Car VIN:</label>
+                    </div>
+                    <div class="col-md-3">
+                        <input type="text" id="existingCarVin" th:field="*{existingCarVin}">
+                    </div>
+                </div>
             </div>
-
             <div class="col-md-6">
-                <h3> If you are new customer - please fill out every input in the form!</h3>
+                <h3>If you are new customer - please fill out every input in the form!</h3>
                 <br>
                 <p>Please enter customer data:</p>
-
                 <div class="row mt-3">
                     <div class="col-md-3">
                         <label for="customerName">Customer name:</label>
@@ -86,7 +64,6 @@
                         <input type="text" id="customerName" th:field="*{customerName}">
                     </div>
                 </div>
-
                 <div class="row mt-3">
                     <div class="col-md-3">
                         <label for="customerSurname">Customer surname:</label>
@@ -95,7 +72,6 @@
                         <input type="text" id="customerSurname" th:field="*{customerSurname}">
                     </div>
                 </div>
-
                 <div class="row mt-3">
                     <div class="col-md-3">
                         <label for="customerEmail">Customer email:</label>
@@ -104,7 +80,6 @@
                         <input type="text" id="customerEmail" th:field="*{customerEmail}">
                     </div>
                 </div>
-
                 <div class="row mt-3">
                     <div class="col-md-3">
                         <label for="customerPhone">Phone number:</label>
@@ -128,7 +103,6 @@
                         <label for="customerAddressCity">City:</label>
                     </div>
                     <div class="col-md-3">
-
                         <input type="text" id="customerAddressCity" th:field="*{customerAddressCity}">
                     </div>
                 </div>
@@ -148,33 +122,59 @@
                         <input type="text" id="customerAddressStreet" th:field="*{customerAddressStreet}">
                     </div>
                 </div>
+                <br>
+                <p>Please provide car data:</p>
+                <div class="row mt-3">
+                    <div class="col-md-3">
+                        <label for="carVin">Car VIN:</label>
+                    </div>
+                    <div class="col-md-3">
+                        <input type="text" id="carVin" th:field="*{carVin}">
+                    </div>
+                </div>
+                <div class="row mt-3">
+                    <div class="col-md-3">
+                        <label for="carBrand">Car Brand:</label>
+                    </div>
+                    <div class="col-md-3">
+                        <input type="text" id="carBrand" th:field="*{carBrand}">
+                    </div>
+                </div>
+                <div class="row mt-3">
+                    <div class="col-md-3">
+                        <label for="carModel">Car Model:</label>
+                    </div>
+                    <div class="col-md-3">
+                        <input type="text" id="carModel" th:field="*{carModel}">
+                    </div>
+                </div>
+                <div class="row mt-3">
+                    <div class="col-md-3">
+                        <label for="carYear">Car Year:</label>
+                    </div>
+                    <div class="col-md-3">
+                        <input type="text" id="carYear" th:field="*{carYear}">
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row mt-3">
+            <div class="col-md-3">
+                <label for="customerComment">Comment:</label>
+            </div>
+            <div class="col-md-3">
+                <textarea id="customerComment" th:field="*{customerComment}" rows="10" cols="50" required="required"></textarea>
             </div>
         </div>
         <div class="row mt-3">
             <div class="col-md-6">
-                <label for="carVin">Car VIN:</label>
-                <select id="carVin" th:field="*{carVin}">
-                    <option th:each="availableCarVin : ${availableCarVins}" th:value="${availableCarVin}"
-                            th:text="${availableCarVin}"></option>
-                </select>
-            </div>
-            <div class="col-md-6">
-                <label for="salesmanPesel">Salesman:</label>
-                <select id="salesmanPesel" th:field="*{salesmanPesel}">
-                    <option th:each="availableSalesmanPesel : ${availableSalesmanPesels}"
-                            th:value="${availableSalesmanPesel}" th:text="${availableSalesmanPesel}"></option>
-                </select>
+                <input type="submit" value="Request!" class="btn btn-success">
             </div>
         </div>
-        <div class="row mt-3">
-            <div class="col-md-6">
-                <input type="submit" value="Purchase!" class="btn btn-success">
-            </div>
-        </div>
-
-
     </form>
+
 </div>
+
 <br>
 <br>
 </body>
